replaced div tags with semantic tags, and everything is still functioning.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
-
+<!-- headers (ordered by importance), main, nav, footer, aside, section  -->
 <body>
-    <div class="header">
+    <!-- replaced div tag to header tag -->
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,9 +24,10 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="A diverse team meeting around a table working on some marketing plans.">
-    <div class="content">
+    <!-- replaced div tag to main tag -->
+    <main class="content">
         <div id="#search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="A photo of a wooden table, a Macbook with a magnifying class resting on top, a cup of coffee, pens, and notebook with a graffic of a thought bubble that says SEO." class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -47,8 +49,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
+    </main>
+    <!-- replaced div tag to aside tag -->
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="An icon of a cog going into a funnel and coming out as a doller symbol."/>
@@ -70,13 +73,14 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
-    <div class="footer">
+    </aside>
+    <!-- replaced div tag to footer tag -->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
